[project]
name = "keynesian-beauty-contest"
version = "0.1.0"
description = ""
authors = ["Richard Blythman <richardblythman@gmail.com>"]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "naptha-sdk",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["keynesian_beauty_contest"]

[tool.uv.sources]
naptha-sdk = { git = "https://github.com/NapthaAI/naptha-sdk.git" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"